<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@mipmap/back_to_previous"
            android:onClick="back_to_main"
            android:contentDescription="@string/finish_this_interface"/>

        <TextView
            android:id="@+id/poemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/poem_name"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/poemNameEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/poemName"
            android:gravity="center"
            android:textSize="18sp"
            android:maxEms="20"
            android:lines="2" />

        <TextView
            android:id="@+id/authorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/poemNameEnglish"
            android:text="@string/author_name"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/authorNameEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/authorName"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/firstSentence"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/authorName"
            android:layout_marginTop="50dp"
            android:text="@string/first_sentence"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/firstSentenceEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/firstSentence"
            android:textSize="18sp"
            android:maxEms="15"
            android:lines="2"/>

        <TextView
            android:id="@+id/secondSentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/firstSentenceEnglish"
            android:text="@string/second_sentence"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/secondSentenceEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/secondSentence"
            android:textSize="18sp"
            android:maxEms="15"
            android:lines="2"/>

        <TextView
            android:id="@+id/thirdSentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/secondSentenceEnglish"
            android:text="@string/third_sentence"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/thirdSentenceEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/thirdSentence"
            android:textSize="18sp"
            android:maxEms="15"
            android:lines="2"/>

        <TextView
            android:id="@+id/fourthSentence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/thirdSentenceEnglish"
            android:text="@string/fourth_sentence"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/fourthSentenceEnglish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:layout_below="@+id/fourthSentence"
            android:textSize="18sp"
            android:maxEms="15"
            android:lines="2"/>

        <Button
            android:id="@+id/translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            android:layout_toRightOf="@+id/back"
            android:layout_toEndOf="@+id/back"
            android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp"/>

        <Button
            android:id="@+id/show_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vedio"
            android:layout_toRightOf="@+id/translate"
            android:layout_toEndOf="@+id/translate"
            />



        <com.example.sidebottom.SlideBottomLayout
            android:id="@+id/slideLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="200dp"
            app:handler_height="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/handle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#d95858"
                    android:gravity="center"
                    android:text="Learn More..."
                    android:textColor="@android:color/white"
                    android:textSize="24sp" />

                <ScrollView
                    android:id="@+id/scrollView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">


                        <TextView
                            android:id="@+id/introduction_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:text="AUTHOR'S BRIEF INTRODUCTION"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"/>

                        <ImageView
                            android:id="@+id/Author_image"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_below="@+id/introduction_title"
                            android:layout_centerHorizontal="true"
                            app:srcCompat="@drawable/li_bai" />

                        <TextView
                            android:id="@+id/introduction"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/Author_image"
                            android:layout_centerHorizontal="true"
                            android:text="Sorry, this database does not have this author~"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:maxEms="17"/>

                        <TextView
                            android:id="@+id/poem_background"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="BACKGROUND"
                            android:textSize="30sp"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/introduction"
                            android:layout_marginTop="50dp"/>

                        <TextView
                            android:id="@+id/poemBackgrounds"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="This poem is generally believed to have been written by li bai when he first visited mount lushan on his way to jinling around 725 AD ."
                            android:textSize="18sp"
                            android:gravity="center"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@+id/poem_background"
                            android:layout_marginBottom="50dp"
                            android:maxEms="17"/>


                    </RelativeLayout>

                </ScrollView>

            </LinearLayout>

        </com.example.sidebottom.SlideBottomLayout>

    </RelativeLayout>

</LinearLayout>